HEAD
	+ Bugfix: package removal does not crash if can't unsubscribe
	+ Bugfix: Remove key field in consolidation which is useless in
	  this context and it leads to errors everyday of the month except
	  the first one
	+ Indicate script to run when changing configuration file
2.0.8
	+ Remote backup is now overwritten with Basic Subscription
	+ Using a new key from bundle or dnsServer as fallback to set the
	  set of addresses to access from Zentyal Cloud
	+ Added check to not use any address when connected to Zentyal
	  Cloud to do remote support
2.0.7
	+ Added backup/restore of subscription credentials
	+ Added API to get the list of registered Zentyal servers
	+ Added API to get the backup credentials if available
	+ Added API to know if the disaster recovery add-on is on
	+ Fixed problems with cache values
2.0.6
	+ Typo fix to run cron job when the period says to do
	+ Set default order for dashboard widgets
2.0.5
	+ Set hostname as default value for server name
	+ Minor message changes
	+ Correct case for sql column names
2.0.4
	+ Fixed bad hour bug in remoteservices cron file generation
2.0.3
	+ Allow insecure clients (bad renegotiation CVE-2009-3555) until
	  Zentyal Cloud clients have the problem fixed.
	+ Do not save Apache module in module restarts as GUI already do
	  it at the end of saving modules stage
	+ Set random times for cron tasks
	+ Bugfix: Remote access is again passwordless after changing our
	  brand
	+ Bugfix: Asked for the subscription level after subscription
	  during saving changes stage to avoid showing up commercial
	  messages when they should not
	+ Bugfix: Added pageTitle property to remote support access page
2.0.2
	+ Handle exceptions in subscription levels SOAP calls
2.0.1
	+ Added API to query to internal nameserver
	+ Added API to know the subscription level
	+ Added API to know the add-on server has
	+ Switch to cloud.zentyal.com
2.0
	+ Fixed bug cleaning CC control jobs, added facilities for
	internal and no-CC job
1.5.8