@@ -4,8 +4,8 @@ perldir = @PERLPATH@/EBox/RemoteServices
 
 mods = Alerts.pm Auth.pm Base.pm Backup.pm Bundle.pm Capabilities.pm \
        Configuration.pm CSV.pm DisasterRecovery.pm DisasterRecoveryProxy.pm \
-       Jobs.pm ProxyBackup.pm SOAPClient.pm Subscription.pm SupportAccess.pm \
-       WSDispatcher.pm
+       Jobs.pm Nmap.pm ProxyBackup.pm SOAPClient.pm Subscription.pm \
+       SupportAccess.pm WSDispatcher.pm
 
 nobase_perl_DATA = $(mods)
 
